--- a/src/Product.css
+++ b/src/Product.css
@@ -1,6 +1,6 @@
-.Product{
+.Product {
     width: 30rem;
-    border : 1px solid white;
+    border: 1px solid black;
     border-radius: 15px;
     margin-bottom: 10px;
 }
